--- a/flaskProject/style.css
+++ b/flaskProject/style.css
@@ -37,14 +37,17 @@ h4{
 .btn{
     font-size: 20px;
     display: inline-block;
-    border: 1px solid white;
+    border: 2px solid white;
     padding: 3px 20px;
     border-radius: 5px;
     cursor: pointer;
     font-weight: 300;
     margin-top: 30px;
+    background-color: #242424;
+    color: white;
 }
 .btn:hover{
+    border: 2px solid white;
     background-color: white;
     color: #33cccc;
 }
